fix image align

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,5 +1,5 @@
 :root {
-    --primary: #F4AF17;
+    --primary: #fac043;
 }
 
 ::selection {
